--- a/theme/renexmoe-tw527e-edition-elemecdn.html
+++ b/theme/renexmoe-tw527e-edition-elemecdn.html
@@ -284,9 +284,9 @@
       <!--MultiDisksEnd-->
       <div class="mdui-divider"></div>
       <!--MultiDiskAreaEnd-->
-      <a target="_blank" href="https://github.com/qkqpttgf/OneManager-php" class="mdui-list-item mdui-ripple">
+      <a target="_blank" href="https://5201314.ml" class="mdui-list-item mdui-ripple">
         <i class="mdui-list-item-icon mdui-icon material-icons">code</i>
-        <div class="mdui-list-item-content">Github</div>
+        <div class="mdui-list-item-content">5201314.ml</div>
       </a>
       <li class="mdui-list-item mdui-ripple" id="about_theme">
         <i class="mdui-list-item-icon mdui-icon material-icons">info</i>
