--- a/theme/renexmoe-tw527e-edition-elemecdn.html
+++ b/theme/renexmoe-tw527e-edition-elemecdn.html
@@ -288,10 +288,10 @@
         <i class="mdui-list-item-icon mdui-icon material-icons">code</i>
         <div class="mdui-list-item-content">5201314.ml</div>
       </a>
-      <li class="mdui-list-item mdui-ripple" id="about_theme">
-        <i class="mdui-list-item-icon mdui-icon material-icons">info</i>
-        <div class="mdui-list-item-content">關於主題</div>
-      </li>
+      <a target="_blank" href="https://0668.ml" class="mdui-list-item mdui-ripple">
+        <i class="mdui-list-item-icon mdui-icon material-icons">code</i>
+        <div class="mdui-list-item-content">京东免费挂机</div>
+      </a>
       <div class="mdui-divider"></div>
       <li class="mdui-list-item mdui-ripple" id="select_language" style="overflow: visible;">
         <i class="mdui-list-item-icon mdui-icon material-icons">language</i>
